--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body>
-  
+  <img src="./static/img/logo-endor.svg">
+  <h1>
+    
+  </h1>
 </body>
 </html>
