--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body>
-  
+    <header>
+        <div></div>
+        <img src="" >
+        <section></section>
+    </header>
+    <main>
+    </main>
+    <footer>
+    </footer>
 </body>
 </html>
