--- a/index.html
+++ b/index.html
@@ -3,107 +3,207 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyecto - Grupo 2</title>
+    <title>Alexander Walker - Portfolio</title>
     <link rel="stylesheet" href="static/css/styles.css" />
+    <link rel="stylesheet" href="static/css/reset.css" />
+    <script
+      src="https://kit.fontawesome.com/0533b98539.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body>
-    <header>
-      <div class="cont-menu">
-        <div class="circle-one">
-          <span class="circle-two"></span>
+  <body class="cont-body">
+    <header class="header">
+      <span class="logo-head">AW.</span>
+      <div class="container-name">
+        <div class="name-sec">
+          <h1>Alexander Walker</h1>
+          <h2>Designer & Front Dev.</h2>
+        </div>
+        <div class="img-sec">
+          <img src="./static/img/bg-2.jpg" alt="img-bg-texture" />
         </div>
       </div>
-      <img class="logo-endor" src="./static/img/logo-endor.svg" />
-      <!--modificar barrita de contacto-->
-      <div class="nav-contact">
-        <a href="/">
-          <img class="icon-btn" src="./static/img/icon-03.svg" />
-        </a>
-        <a href="/">
-          <img class="icon-btn" src="./static/img/icon-02.svg" />
-        </a>
+      <div class="container-btns">
+        <div class="cont-img-btns">
+          <img src="./static/img/bg.jpg" alt="img-bg-texture" />
+        </div>
+        <div class="con-btns">
+          <button>
+            <i class="fa-solid fa-phone cel"></i>
+          </button>
+          <button>
+            <i class="fa-brands fa-whatsapp wss"></i>
+          </button>
+          <button>
+            <i class="fa-regular fa-envelope mail"></i>
+          </button>
+          <button>
+            <i class="fa-brands fa-linkedin-in wss"></i>
+          </button>
+          <button>
+            <i class="fa-brands fa-instagram wss"></i>
+          </button>
+        </div>
+      </div>
+      <div class="btn-scroll">
+        <i class="fa-solid fa-shuffle"></i>
       </div>
     </header>
-    <main>
-      <section class="cont-all-img">
-        <div class="name-section">
-          <p><b>MEET</b> OUR TEAM</p>
-        </div>
-        <div class="box-img">
-          <div class="cont-img">
-            <div class="info-user">
-              <p class="name-cargo">Lead Designer</p>
-              <p class="name-user">Daniel<br />Cueto</p>
-              <div class="btn-social">
-                <a target="_blank" href="https://github.com/DCueto">
-                  <img alt="logo-social" src="./static/img/social-04.svg" />
-                </a>
-                <a target="_blank" href="https://www.linkedin.com/in/dcuetome/">
-                  <img alt="logo-social" src="./static/img/social-05.svg" />
-                </a>
-              </div>
+    <main class="main-body">
+      <section class="perfil-view">
+        <img
+          class="img-perfil"
+          src="./static/img/edit-profile-alex.png"
+          alt=""
+        />
+        <div class="text-info">
+          <h3>Tech Skylls</h3>
+          <p>Specialized in UX/UI and Front End Developer.</p>
+          <div class="cont-programs">
+            <div class="lenguage-box">
+              <i class="fa-brands fa-react"></i>
+              <p>React Js</p>
             </div>
-            <img class="img-user" src="./static/img/image-1-2.jpg" />
+            <div class="lenguage-box">
+              <i class="fa-brands fa-square-js"></i>
+              <p>Javascript</p>
+            </div>
+            <div class="lenguage-box">
+              <i class="fa-brands fa-html5"></i>
+              <p>Html 5</p>
+            </div>
+            <div class="lenguage-box">
+              <i class="fa-brands fa-css3-alt"></i>
+              <p>CSS</p>
+            </div>
           </div>
-          <div class="cont-img">
-            <div class="info-user">
-              <p class="name-cargo">Lead Designer</p>
-              <p class="name-user">Alexander<br />Walker</p>
-              <div class="btn-social">
-                <a target="_blank" href="https://github.com/walkeriano">
-                  <img alt="logo-social" src="./static/img/social-04.svg" />
-                </a>
-                <a target="_blank" href="https://www.linkedin.com/in/alexander-walker-barreda-39442b139/">
-                  <img alt="logo-social" src="./static/img/social-05.svg" />
-                </a>
-              </div>
+          <div class="cont-programs-design">
+            <div class="lenguage-box">
+              <img src="./static/img/logo-figma.png" alt="logo-figma" />
+              <p>Figma</p>
             </div>
-            <img class="img-user" src="./static/img/image-2-2.jpg" />
-          </div>
-          <div class="cont-img">
-            <div class="info-user">
-              <p class="name-cargo">Lead Designer</p>
-              <p class="name-user">Paul<br />Corda</p>
-              <div class="btn-social">
-                <a target="_blank" href="/">
-                  <img alt="logo-social" src="./static/img/social-04.svg" />
-                </a>
-                <a target="_blank" href="/">
-                  <img alt="logo-social" src="./static/img/social-05.svg" />
-                </a>
-              </div>
+            <div class="lenguage-box">
+              <img src="./static/img/psd-logo.svg" alt="logo-figma" />
+              <p>Photoshop</p>
             </div>
-            <img class="img-user" src="./static/img/image-3-2.jpg" />
-          </div>
-          <div class="cont-img">
-            <div class="info-user">
-              <p class="name-cargo">Lead Designer</p>
-              <p class="name-user">Isaías<br />Ramírez</p>
-              <div class="btn-social">
-                <a target="_blank" href="https://github.com/isaiasd2712">
-                  <img alt="logo-social" src="./static/img/social-04.svg" />
-                </a>
-                <a target="_blank" href="https://www.linkedin.com/in/isaias-ramirez-b38703161">
-                  <img alt="logo-social" src="./static/img/social-05.svg" />
-                </a>
-              </div>
+            <div class="lenguage-box">
+              <img src="./static/img/ai-logo.svg" alt="logo-figma" />
+              <p>Illustrator</p>
             </div>
-            <img class="img-user" src="./static/img/image-4-2.jpg" />
           </div>
         </div>
       </section>
+      <section class="works-view">
+        <div class="cont-works-l">
+          <a href="https://jmtechnology.org/">
+            <p>Jm Technology - Website</p>
+            <img src="./static/img/work-tre.jpg" alt="project-work" />
+          </a>
+          <a href="https://jmtechnology.org/">
+            <p>Filmincat - Web App</p>
+            <img src="./static/img/work-five.jpg" alt="project-work" />
+          </a>
+          <a href="https://jmtechnology.org/">
+            <p>Hack.ai - Website</p>
+            <img src="./static/img/work-one.jpg" alt="project-work" />
+          </a>
+        </div>
+        <div class="cont-works-r">
+          <a href="https://jmtechnology.org/">
+            <p>Frontify - Web App</p>
+
+            <img src="./static/img/work-two.jpg" alt="project-work" />
+          </a>
+          <a href="https://comopezenelaula.com/">
+            <p>C.P.A - Website</p>
+
+            <img src="./static/img/work-one.jpg" alt="project-work" />
+          </a>
+          <a href="https://jmtechnology.org/">
+            <p>Shugo - Web App</p>
+
+            <img src="./static/img/work-for.jpg" alt="project-work" />
+          </a>
+        </div>
+        <div class="bg-works">
+          <span class="logo">AW.</span>
+          <h4>Works</h4>
+          <p>Versatile & Modern</p>
+          <a href="#contact">Contact</a>
+          <img
+            class="cont-bg-works"
+            src="./static/img/bg-aros.png"
+            alt="bg-aros"
+          />
+          <img
+            class="cont-bg-works-resp-r"
+            src="./static/img/bg-aros-movil.png"
+            alt="bg-aros"
+          />
+          <img
+            class="cont-bg-works-resp-l"
+            src="./static/img/bg-aros-movil-two.png"
+            alt="bg-aros"
+          />
+        </div>
+      </section>
+      <section id="contact" class="sec-contact">
+        <h4>I'm ready to create</h4>
+        <p>Contact me</p>
+        <div class="con-btns-contact">
+          <button>
+            <i class="fa-solid fa-phone cel"></i>
+          </button>
+          <button>
+            <i class="fa-brands fa-whatsapp wss"></i>
+          </button>
+          <button>
+            <i class="fa-regular fa-envelope mail"></i>
+          </button>
+          <button>
+            <i class="fa-brands fa-linkedin-in wss"></i>
+          </button>
+          <button>
+            <i class="fa-brands fa-instagram wss"></i>
+          </button>
+        </div>
+      </section>
+      <img
+        src="./static/img/bg-perfil-2.png"
+        class="bg-gray-two"
+        alt="img-bg-texture"
+      />
+      <img
+        src="./static/img/bg-perfil.png"
+        class="bg-gray"
+        alt="img-bg-texture"
+      />
+      <img
+        src="./static/img/bg-perfil-2resp.png"
+        class="bg-gray-two-resp"
+        alt="img-bg-texture"
+      />
+      <img
+        src="./static/img/bg-perfilresp.png"
+        class="bg-gray-resp"
+        alt="img-bg-texture"
+      />
     </main>
     <footer class="footer">
-        <img class="img-logo-contact" src="./static/img/logo-endor.svg" >
-        <div class="container-text-footer" >
-            <ul class="list-contacto" >
-                <li>893823819</li>
-                <li>contacto@endor.es</li>
-                <li>Barcelona, España.</li>
-            </ul>
-            <p class="copyright" >Copyright 2023 - Factoria F5</p>
+      <div class="cont-footer">
+        <div class="cont-r">
+          <h4>Alexander Walker</h4>
+          <p>Designer & Front Dev</p>
+          <ul>
+            <li>+34 611 51 07 25</li>
+            <li>awalkerbarreda@gmail.com</li>
+          </ul>
         </div>
-        
+        <ul class="cont-l">
+          <li>Barcelona, Spain.</li>
+          <li>Copyright 2023.</li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
