ready for client

--- a/index.html
+++ b/index.html
@@ -28,21 +28,27 @@
           <img src="./static/img/bg.jpg" alt="img-bg-texture" />
         </div>
         <div class="con-btns">
-          <button>
+          <a target="_blank" href="tel:+34639405634">
             <i class="fa-solid fa-phone cel"></i>
-          </button>
-          <button>
+          </a>
+          <a
+            target="_blank"
+            href="https://wa.me/34611510725?text=Hola%20¿me%20brindas%20más%20información?"
+          >
             <i class="fa-brands fa-whatsapp wss"></i>
-          </button>
-          <button>
+          </a>
+          <a target="_blank" href="mailto: awalkerbarreda@gmail.com">
             <i class="fa-regular fa-envelope mail"></i>
-          </button>
-          <button>
+          </a>
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/alexander-walker-barreda-39442b139/"
+          >
             <i class="fa-brands fa-linkedin-in wss"></i>
-          </button>
-          <button>
+          </a>
+          <a target="_blank" href="https://www.instagram.com/walkeriano/">
             <i class="fa-brands fa-instagram wss"></i>
-          </button>
+          </a>
         </div>
       </div>
       <div class="btn-scroll">
@@ -95,33 +101,30 @@
       </section>
       <section class="works-view">
         <div class="cont-works-l">
-          <a href="https://jmtechnology.org/">
+          <a target="_blank" href="https://jmtechnology.org/">
             <p>Jm Technology - Website</p>
             <img src="./static/img/work-tre.jpg" alt="project-work" />
           </a>
-          <a href="https://jmtechnology.org/">
+          <a target="_blank" href="https://filmin-movies.vercel.app/">
             <p>Filmincat - Web App</p>
             <img src="./static/img/work-five.jpg" alt="project-work" />
           </a>
-          <a href="https://jmtechnology.org/">
+          <a target="_blank" href="https://walkeriano.github.io/hack.ai---project/">
             <p>Hack.ai - Website</p>
             <img src="./static/img/work-one.jpg" alt="project-work" />
           </a>
         </div>
         <div class="cont-works-r">
-          <a href="https://jmtechnology.org/">
+          <a target="_blank" href="https://fontify-music.vercel.app/">
             <p>Frontify - Web App</p>
-
             <img src="./static/img/work-two.jpg" alt="project-work" />
           </a>
-          <a href="https://comopezenelaula.com/">
+          <a target="_blank" href="https://comopezenelaula.com/">
             <p>C.P.A - Website</p>
-
             <img src="./static/img/work-one.jpg" alt="project-work" />
           </a>
-          <a href="https://jmtechnology.org/">
+          <a target="_blank" href="https://jmtechnology.org/">
             <p>Shugo - Web App</p>
-
             <img src="./static/img/work-for.jpg" alt="project-work" />
           </a>
         </div>
