--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container-name">
         <div class="name-sec">
           <h1>Alexander Walker</h1>
-          <h2>Designer & Front Dev.</h2>
+          <h2>Frontend Developer & Designer</h2>
         </div>
         <div class="img-sec">
           <img src="./static/img/bg-2.jpg" alt="img-bg-texture" />
@@ -63,8 +63,8 @@
           alt=""
         />
         <div class="text-info">
-          <h3>Tech Skylls</h3>
-          <p>Specialized in UX/UI and Front End Developer.</p>
+          <h3>Tech Skills</h3>
+          <p>Specialized in Frontend Development and UX/UI</p>
           <div class="cont-programs">
             <div class="lenguage-box">
               <i class="fa-brands fa-react"></i>
