cambios listos para los nuevos clientes

--- a/index.html
+++ b/index.html
@@ -101,30 +101,30 @@
       </section>
       <section class="works-view">
         <div class="cont-works-l">
-          <a target="_blank" href="https://jmtechnology.org/">
-            <p>Jm Technology - Website</p>
-            <img src="./static/img/work-tre.jpg" alt="project-work" />
-          </a>
-          <a target="_blank" href="https://filmin-movies.vercel.app/">
-            <p>Filmincat - Web App</p>
-            <img src="./static/img/work-five.jpg" alt="project-work" />
-          </a>
-          <a target="_blank" href="https://walkeriano.github.io/hack.ai---project/">
-            <p>Hack.ai - Website</p>
-            <img src="./static/img/work-one.jpg" alt="project-work" />
-          </a>
-        </div>
-        <div class="cont-works-r">
           <a target="_blank" href="https://fontify-music.vercel.app/">
-            <p>Frontify - Web App</p>
+            <p>Frontify Music - Web App</p>
             <img src="./static/img/work-two.jpg" alt="project-work" />
           </a>
           <a target="_blank" href="https://comopezenelaula.com/">
             <p>C.P.A - Website</p>
             <img src="./static/img/work-one.jpg" alt="project-work" />
           </a>
+          <a target="_blank" href="https://filmin-movies.vercel.app/">
+            <p>Filmincat - Web App</p>
+            <img src="./static/img/work-five.jpg" alt="project-work" />
+          </a>
+        </div>
+        <div class="cont-works-r">
+          <a target="_blank" href="https://rrjremodeling.com/">
+            <p>RRJ Construction - Website</p>
+            <img src="./static/img/work-six.jpg" alt="project-work" />
+          </a>
           <a target="_blank" href="https://jmtechnology.org/">
-            <p>Shugo - Web App</p>
+            <p>Jm Technology - Website</p>
+            <img src="./static/img/work-tre.jpg" alt="project-work" />
+          </a>
+          <a target="_blank" href="https://bigbarden.com/">
+            <p>Bigbarden - Website</p>
             <img src="./static/img/work-for.jpg" alt="project-work" />
           </a>
         </div>
