--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
           <p>Specialized in Frontend Development and UX/UI</p>
           <div class="cont-programs">
             <div class="lenguage-box">
+              <img src="./static/img/nextjs.png" alt="logo-figma" />
+              <p>Next Js</p>
+            </div>
+            <div class="lenguage-box">
               <i class="fa-brands fa-react"></i>
               <p>React Js</p>
             </div>
@@ -105,8 +109,8 @@
             <p>Frontify Music - Web App</p>
             <img src="./static/img/work-two.jpg" alt="project-work" />
           </a>
-          <a target="_blank" href="https://comopezenelaula.com/">
-            <p>C.P.A - Website</p>
+          <a target="_blank" href="https://qr-space.vercel.app/">
+            <p>QR Space - Web App</p>
             <img src="./static/img/work-one.jpg" alt="project-work" />
           </a>
           <a target="_blank" href="https://filmin-movies.vercel.app/">
@@ -119,12 +123,12 @@
             <p>RRJ Construction - Website</p>
             <img src="./static/img/work-six.jpg" alt="project-work" />
           </a>
-          <a target="_blank" href="https://jmtechnology.org/">
+          <a target="_blank" href="https://walkeriano.github.io/jmtech/">
             <p>Jm Technology - Website</p>
             <img src="./static/img/work-tre.jpg" alt="project-work" />
           </a>
-          <a target="_blank" href="https://bigbarden.com/">
-            <p>Bigbarden - Website</p>
+          <a target="_blank" href="https://goskating.vercel.app/">
+            <p>GOskating - Website</p>
             <img src="./static/img/work-for.jpg" alt="project-work" />
           </a>
         </div>
@@ -154,21 +158,27 @@
         <h4>I'm ready to create</h4>
         <p>Contact me</p>
         <div class="con-btns-contact">
-          <button>
+          <a target="_blank" href="tel:+34639405634">
             <i class="fa-solid fa-phone cel"></i>
-          </button>
-          <button>
+          </a>
+          <a
+            target="_blank"
+            href="https://wa.me/34611510725?text=Hola%20¿me%20brindas%20más%20información?"
+          >
             <i class="fa-brands fa-whatsapp wss"></i>
-          </button>
-          <button>
+          </a>
+          <a target="_blank" href="mailto: awalkerbarreda@gmail.com">
             <i class="fa-regular fa-envelope mail"></i>
-          </button>
-          <button>
+          </a>
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/alexander-walker-barreda-39442b139/"
+          >
             <i class="fa-brands fa-linkedin-in wss"></i>
-          </button>
-          <button>
+          </a>
+          <a target="_blank" href="https://www.instagram.com/walkeriano/">
             <i class="fa-brands fa-instagram wss"></i>
-          </button>
+          </a>
         </div>
       </section>
       <img
@@ -196,7 +206,7 @@
       <div class="cont-footer">
         <div class="cont-r">
           <h4>Alexander Walker</h4>
-          <p>Designer & Front Dev</p>
+          <p>Front Dev & Designer</p>
           <ul>
             <li>+34 611 51 07 25</li>
             <li>awalkerbarreda@gmail.com</li>
@@ -204,7 +214,7 @@
         </div>
         <ul class="cont-l">
           <li>Barcelona, Spain.</li>
-          <li>Copyright 2023.</li>
+          <li>Copyright 2025.</li>
         </ul>
       </div>
     </footer>
