--- a/index.html
+++ b/index.html
@@ -86,8 +86,21 @@
               <i class="fa-brands fa-css3-alt"></i>
               <p>CSS</p>
             </div>
+            <div class="lenguage-box">
+              <img src="./static/img/fire-logo.svg" alt="logo-figma" />
+              <p>Firebase</p>
+            </div>
           </div>
           <div class="cont-programs-design">
+            <div class="lenguage-box">
+              <img src="./static/img/vercel-logo.svg" alt="logo-figma" />
+              <p>Vercel</p>
+            </div>
+            
+            <div class="lenguage-box">
+              <img src="./static/img/git-logo.svg" alt="logo-figma" />
+              <p>GitHub</p>
+            </div>
             <div class="lenguage-box">
               <img src="./static/img/logo-figma.png" alt="logo-figma" />
               <p>Figma</p>
