--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <img src="./static/img/vercel-logo.svg" alt="logo-figma" />
               <p>Vercel</p>
             </div>
-            
+
             <div class="lenguage-box">
               <img src="./static/img/git-logo.svg" alt="logo-figma" />
               <p>GitHub</p>
@@ -119,29 +119,37 @@
       <section class="works-view">
         <div class="cont-works-l">
           <a target="_blank" href="https://fontify-music.vercel.app/">
-            <p>Frontify Music - Web App</p>
+            <p>Frontify Music<br/>Web App</p>
             <img src="./static/img/work-two.jpg" alt="project-work" />
           </a>
+          <a target="_blank" href="https://easy-play-chi.vercel.app/">
+            <p>Easy Play<br/>Web App</p>
+            <img src="./static/img/ad-4.jpg" alt="project-work" />
+          </a>
           <a target="_blank" href="https://qr-space.vercel.app/">
-            <p>QR Space - Web App</p>
+            <p>QR Space<br/>Web App</p>
             <img src="./static/img/work-one.jpg" alt="project-work" />
           </a>
           <a target="_blank" href="https://filmin-movies.vercel.app/">
-            <p>Filmincat - Web App</p>
+            <p>Filmincat<br/>Web App</p>
             <img src="./static/img/work-five.jpg" alt="project-work" />
           </a>
         </div>
         <div class="cont-works-r">
           <a target="_blank" href="https://rrjremodeling.com/">
-            <p>RRJ Construction - Website</p>
+            <p>RRJ Construction<br/>Website</p>
             <img src="./static/img/work-six.jpg" alt="project-work" />
           </a>
+          <a target="_blank" href="https://sb-consultores-corporativos.vercel.app/">
+            <p>SB Consultoría Legal<br/>Website</p>
+            <img src="./static/img/ad-5.jpg" alt="project-work" />
+          </a>
           <a target="_blank" href="https://walkeriano.github.io/jmtech/">
-            <p>Jm Technology - Website</p>
+            <p>Jm Technology<br/>Website</p>
             <img src="./static/img/work-tre.jpg" alt="project-work" />
           </a>
           <a target="_blank" href="https://goskating.vercel.app/">
-            <p>GOskating - Website</p>
+            <p>GOskating<br/>Website</p>
             <img src="./static/img/work-for.jpg" alt="project-work" />
           </a>
         </div>
