--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
       <div class="btn-scroll">
         <i class="fa-solid fa-shuffle"></i>
       </div>
+      <div class="img-person-alx">
+        <span></span>
+        <img src="./static/img/bg.jpg" alt="img-bg-texture" />
+      </div>
     </header>
     <main class="main-body">
       <section class="perfil-view">
@@ -87,16 +91,27 @@
               <p>CSS</p>
             </div>
             <div class="lenguage-box">
-              <img src="./static/img/fire-logo.svg" alt="logo-figma" />
-              <p>Firebase</p>
+              <img src="./static/img/sass.png" alt="logo-figma" />
+              <p>Sass</p>
+            </div>
+            <div class="lenguage-box">
+              <img src="./static/img/nodejs-logo.png" alt="logo-figma" />
+              <p>Node JS</p>
             </div>
           </div>
           <div class="cont-programs-design">
             <div class="lenguage-box">
+              <img src="./static/img/fire-logo.svg" alt="logo-figma" />
+              <p>Firebase</p>
+            </div>
+            <div class="lenguage-box">
+              <img src="./static/img/gsap-logopng.png" alt="logo-figma" />
+              <p>Gsap</p>
+            </div>
+            <div class="lenguage-box">
               <img src="./static/img/vercel-logo.svg" alt="logo-figma" />
               <p>Vercel</p>
             </div>
-
             <div class="lenguage-box">
               <img src="./static/img/git-logo.svg" alt="logo-figma" />
               <p>GitHub</p>
@@ -119,37 +134,41 @@
       <section class="works-view">
         <div class="cont-works-l">
           <a target="_blank" href="https://fontify-music.vercel.app/">
-            <p>Frontify Music<br/>Web App</p>
+            <p>Frontify Music<br />Web App</p>
             <img src="./static/img/work-two.jpg" alt="project-work" />
           </a>
           <a target="_blank" href="https://easy-play-chi.vercel.app/">
-            <p>Easy Play<br/>Web App</p>
+            <p>Easy Play<br />Web App</p>
             <img src="./static/img/ad-4.jpg" alt="project-work" />
           </a>
           <a target="_blank" href="https://qr-space.vercel.app/">
-            <p>QR Space<br/>Web App</p>
+            <p>QR Space<br />Web App</p>
             <img src="./static/img/work-one.jpg" alt="project-work" />
           </a>
           <a target="_blank" href="https://filmin-movies.vercel.app/">
-            <p>Filmincat<br/>Web App</p>
+            <p>Filmincat<br />Web App</p>
             <img src="./static/img/work-five.jpg" alt="project-work" />
           </a>
         </div>
         <div class="cont-works-r">
-          <a target="_blank" href="https://rrjremodeling.com/">
-            <p>RRJ Construction<br/>Website</p>
-            <img src="./static/img/work-six.jpg" alt="project-work" />
+          <a target="_blank" href="https://valfhesi-group.vercel.app/">
+            <p>Valfhesi Legal Group<br />Website</p>
+            <img src="./static/img/work-seven.jpg" alt="project-work" />
           </a>
-          <a target="_blank" href="https://sb-consultores-corporativos.vercel.app/">
-            <p>SB Consultoría Legal<br/>Website</p>
+          
+          <a
+            target="_blank"
+            href="https://sb-consultores-corporativos.vercel.app/"
+          >
+            <p>SB Consultoría Legal<br />Website</p>
             <img src="./static/img/ad-5.jpg" alt="project-work" />
           </a>
-          <a target="_blank" href="https://walkeriano.github.io/jmtech/">
-            <p>Jm Technology<br/>Website</p>
-            <img src="./static/img/work-tre.jpg" alt="project-work" />
+          <a target="_blank" href="https://unicorn-art-space.vercel.app/">
+            <p>Unicorn Art Space<br />Website</p>
+            <img src="./static/img/work-nine.jpg" alt="project-work" />
           </a>
           <a target="_blank" href="https://goskating.vercel.app/">
-            <p>GOskating<br/>Website</p>
+            <p>GOskating<br />Website</p>
             <img src="./static/img/work-for.jpg" alt="project-work" />
           </a>
         </div>
@@ -174,6 +193,22 @@
             alt="bg-aros"
           />
         </div>
+      </section>
+      <section class="works-second">
+        <section class="flex-items">
+          <a target="_blank" href="https://rrjremodeling.com/">
+            <p>RRJ Construction<br />Website</p>
+            <img src="./static/img/work-six.jpg" alt="project-work" />
+          </a>
+          <a target="_blank" href="https://pedrosremodelingnc.com/">
+            <p>Pedros Remodeling<br />Website</p>
+            <img src="./static/img/work-eight.jpg" alt="project-work" />
+          </a>
+          <a target="_blank" href="https://walkeriano.github.io/jmtech/">
+            <p>Jm Technology<br />Website</p>
+            <img src="./static/img/work-tre.jpg" alt="project-work" />
+          </a>
+        </section>
       </section>
       <section id="contact" class="sec-contact">
         <h4>I'm ready to create</h4>
