--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container-name">
         <div class="name-sec">
           <h1>Alexander Walker</h1>
-          <h2>Frontend Developer & Designer</h2>
+          <h2>Front end Developer</h2>
         </div>
         <div class="img-sec">
           <img src="./static/img/bg-2.jpg" alt="img-bg-texture" />
@@ -68,7 +68,7 @@
         />
         <div class="text-info">
           <h3>Tech Skills</h3>
-          <p>Specialized in Frontend Development and UX/UI</p>
+          <p>Specialized in Javascript / React JS - Next JS</p>
           <div class="cont-programs">
             <div class="lenguage-box">
               <img src="./static/img/nextjs.png" alt="logo-figma" />
