--- a/index.html
+++ b/index.html
@@ -133,21 +133,21 @@
       </section>
       <section class="works-view">
         <div class="cont-works-l">
-          <a target="_blank" href="https://fontify-music.vercel.app/">
-            <p>Frontify Music<br />Web App</p>
-            <img src="./static/img/work-two.jpg" alt="project-work" />
-          </a>
-          <a target="_blank" href="https://easy-play-chi.vercel.app/">
-            <p>Easy Play<br />Web App</p>
-            <img src="./static/img/ad-4.jpg" alt="project-work" />
+          <a target="_blank" href="https://www.quesadacoach.com/">
+            <p>Quesada Fitness App<br />Web App</p>
+            <img src="./static/img/work-five.jpg" alt="project-work" />
           </a>
           <a target="_blank" href="https://qr-space.vercel.app/">
             <p>QR Space<br />Web App</p>
             <img src="./static/img/work-one.jpg" alt="project-work" />
           </a>
-          <a target="_blank" href="https://filmin-movies.vercel.app/">
-            <p>Filmincat<br />Web App</p>
-            <img src="./static/img/work-five.jpg" alt="project-work" />
+          <a target="_blank" href="https://easy-play-chi.vercel.app/">
+            <p>Easy Play<br />Web App</p>
+            <img src="./static/img/ad-4.jpg" alt="project-work" />
+          </a>
+          <a target="_blank" href="https://fontify-music.vercel.app/">
+            <p>Frontify Music<br />Web App</p>
+            <img src="./static/img/work-two.jpg" alt="project-work" />
           </a>
         </div>
         <div class="cont-works-r">
